# TorrentioDebridProxy

./: .dockerignore  .dockerignore.rust  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.optimized  Dockerfile.rust  NODEJS_REMOVAL.md  README.md  docker-compose.yml  index.js  justfile  package-lock.json  package.json
.github/workflows/: docker-image.yml  docker-publish.yml
src/: main.rs
